# UbbCsRo

./: .gitignore  README.md
a1s1/asc/seminar/sem_1/: seminar_1.doc
a1s1/asc/seminar/sem_3/: operatii_logice.xls
a1s1/asc/seminar/sem_7/: Multimodul asm+asm vs multimodul asm+C.doc
a1s2/grafuri/algoritmi_practice/: main.cpp  muchie  muchie.cpp  muchie.h  nod.cpp  nod.h
a1s2/grafuri/algoritmi_practice/Moore/: moore.cpp
a1s2/grafuri/algoritmi_practice/args/: Bellman-Ford.cpp  Ciclu_Eulerian.cpp  Colorare graf.cpp  Conversii.cpp  Huffman.cpp  Inchidere tranzitiva.cpp  Johnsons.cpp  Kruskal_Prim.cpp  Labirint.cpp  Moore.cpp  Proprietati.cpp  Prufer.cpp  edmond-karp.cpp
a1s2/grafuri/algoritmi_practice/bellman-ford/: bellman.cpp
a1s2/grafuri/algoritmi_practice/bfs/: bfs.cpp
a1s2/grafuri/algoritmi_practice/dfs/: dfs-conexitate.cpp  dfs-d_f.cpp
a1s2/grafuri/algoritmi_practice/dijkstra/: d2.cpp  dijskstra.cpp  graf  graf.txt
a1s2/grafuri/algoritmi_practice/kee/: labirint.cpp  rezultat_labirint.txt
a1s2/grafuri/algoritmi_practice/practic_grafuri2/: CMakeLists.txt  clar.txt  codat.txt  main.cpp
a1s2/grafuri/algoritmi_practice/proprietati/: pr.cpp
a1s2/grafuri/algoritmi_practice/roy-warshall/: r-w  r-w.cpp
a1s2/grafuri/algoritmi_practice/test/: CMakeLists.txt  main.cpp  muchie.cpp  muchie.h  nod.h
a1s2/grafuri/algoritmi_practice/test2/: ciclu_eulerian.cpp  colorare.cpp  endmonds_karp.cpp  ford_fulkerson.cpp  huffman_dec.cpp  huffman_enc.cpp  kruskal.cpp  pruffer_dec.cpp  pruffer_enc.cpp
a1s2/grafuri/algoritmi_practice/test_grafuri/: CMakeLists.txt  graf.cpp  graf.h  graf.txt  main.cpp  muchie.h  nod.cpp  nod.h
a1s2/grafuri/laborator/lab2/: cerinte_laborator_2.txt
a1s2/oop/laborator/Observer/: CMakeLists.txt  GUI.cpp  GUI.h  Observer.h  Playlist.cpp  Playlist.h  PlaylistGUI.cpp  PlaylistGUI.h  Repository.cpp  Service.h  Song.h  main.cpp  songs.txt
a1s2/oop/laborator/lab0/probleme/: CMakeLists.txt  descompunere_f_p.c  expoenet_fact.c  indicatorul_lui_euler.c  insertion_sort.c  main.c  prime_n.c  reprezentari_suma.c  sir_termeni.c  sum_cif.c  triunghiul_lui_pascal.c
a1s2/oop/laborator/lab13-14/magazin_gui copy/: CMakeLists.txt  cos_cumparaturi.h  gui.cpp  gui.h  gui_cos.cpp  gui_cos.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  stoc  test_f
a1s2/oop/laborator/lab13-14/magazin_gui copy/exports/: aaa  test_exports
a1s2/oop/laborator/lab5_Cleme/: CMakeLists.txt  compile_valgrind.sh  farmacie  service.c  service.h  teste.c  ui.c  ui.h  zOOP-lab2-4.rar  zcode_review_Moldovan_Mihai_214:2.odt
a1s2/oop/laborator/lab6-7/magazin/: CMakeLists.txt  comparatori.cpp  comparatori.h  domain.cpp  domain.h  exception.h  magazin  main.cpp  repo.cpp  repo.h  service.cpp  service.h  tests.cpp  tests.h  ui.cpp  ui.h  validation.cpp  vector_template.h
a1s2/oop/laborator/lab8-9/magazin/: CMakeLists.txt  compile.sh  cos_cumparaturi.cpp  repo.cpp  repo.h  stoc  ui.h
a1s2/oop/practice/partial/Practic_OOP/: CMakeLists.txt  domain.cpp  domain.h  exception.h  gui.cpp  gui.h  logs  main.cpp  repo.cpp  repo.h  service.cpp  service.h  test.cpp  test.h  validation.cpp  validation.h
a1s2/oop/practice/partial/p1/: CMakeLists.txt  domain_placa.cpp  domain_placa.h  domain_procesor.cpp  domain_procesor.h  exception.cpp  exception.h  gui.cpp  gui.h  main.cpp  repo.h  repo_placi.cpp  repo_placi.h  repo_procesoare.cpp  repo_procesoare.h  service.cpp  service.h  test_placi  test_procesoare  tests.cpp  tests.h  validator.cpp  validator.h
a1s2/oop/practice/partial/p2/untitled/: CMakeLists.txt  apartamente  domain.cpp  domain.h  gui.cpp  gui.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  test_file  teste.cpp  teste.h
a1s2/oop/practice/partial/p3/p3/: CMakeLists.txt  domain.cpp  domain.h  elevi  exception.cpp  exception.h  file_repo.cpp  file_repo.h  gui.cpp  gui.h  main.cpp  service.cpp  service.h  test.cpp  test.h
a1s2/oop/practice/practic/practic_oop/project/: CMakeLists.txt  domain.cpp  domain.h  exception.cpp  exception.h  gui.cpp  gui.h  main.cpp  my_model.cpp  my_model.h  observer.cpp  observer.h  repo.cpp  repo.h  service.cpp  service.h  test.cpp  test.h  test_file  utilaje  valid.cpp  valid.h
a1s2/oop/practice/practic/selectable_painter/: CMakeLists.txt  gui.cpp  gui.h  main.cpp
a1s2/oop/practice/practic/tictactoe/project/: CMakeLists.txt  domain.cpp  domain.h  exception.cpp  exception.h  observer.cpp  observer.h  repo.cpp  repo.h  service.cpp  service.h  test.cpp  test.h
a1s2/sda/examen/: model10.docx
a1s2/sda/laborator/lab1/l1/TAD Coada copy/: CMakeLists.txt
a1s2/sda/laborator/lab1/l1/TAD Coada copy/Proiect C++/: App  App.cpp  Coada.cpp  Coada.h
a1s2/sda/laborator/lab3/TAD Lista Ordonata - 23/TAD_Lista_ordonata_indexata/: CMakeLists.txt  main.cpp  pseudocod
a1s2/sda/laborator/lab3/TAD Lista Ordonata - 23/TAD_Lista_ordonata_indexata/Proiect C++/: Iterator.cpp  Iterator.h  LO.cpp  nod.h
a1s2/sda/laborator/lab4/TAD Multimeb/: App.cpp  CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h
a1s2/sda/laborator/lab4/TAD Multimeb/Teste/: TestExtins.cpp
a1s2/sda/laborator/lab6/TAD Matrice/TAD Matrice/: CMakeLists.txt
a1s2/sda/laborator/lab6/TAD Matrice/TAD Matrice/Proiect C++/: App.cpp  Matrice.cpp  Matrice.h
a1s2/sda/laborator/lab6/TAD Matrice/TAD Matrice/Teste/: TestExtins.cpp  TestScurt.cpp
a1s2/sda/laborator/lab7/TAD Colectie/: CMakeLists.txt
a1s2/sda/laborator/lab7/TAD Colectie/Colectie/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp
a1s2/sda/laborator/lab7/TAD Colectie/Teste/: TestExtins.cpp  TestScurt.cpp
a2s1/db/curs/: Curs12 - Probleme.ppsx  videos
a2s1/plf/seminar/: Seminar 7.docx
a2s1/rc/proiect/: proiect_final.pkt
a2s1/rc/proiect_exp/: proiect_final.pkt
a2s2/mpp/Laborator/: p6.mdj
a2s2/mpp/lab/: TemaProiect1.docx  TemaProiect2.docx  TemaProiect3.docx  TemaProiect4.docx  TemaProiect5.docx  TemaProiect6.docx  TemaProiect7.docx  TemaProiect8.docx
a2s2/sgbd/laborator_rez/: scenarios.sql  scenarios_parallel.sql
a2s2/web/curs/: configurare cont SCS webhosting.txt
(+2166 files in other folders)
