cmake_minimum_required(VERSION 3.26)
project(TAD_Lista_ordonata_indexata)

set(CMAKE_CXX_STANDARD 17)

add_executable(TAD_Lista_ordonata_indexata main.cpp
        "Proiect C++/Iterator.cpp"
        "Proiect C++/Iterator.h"
        "Proiect C++/LO.cpp"
        "Proiect C++/LO.h"
        "Proiect C++/nod.h"
        Teste/TestExtins.cpp
        Teste/TestScurt.cpp
        Teste/TestScurt.h
        Teste/TestExtins.h
        "Proiect C++/nod.cpp"

)
